[tool.poetry]
name = "dlyt"
version = "0.1.0"
description = "Youtube Video Downloader"
authors = ["Paul Martin Panez Caballero <ppanezuni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
